--- a/index.html
+++ b/index.html
@@ -3,9 +3,30 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Literatura universal</title>
 </head>
 <body>
+    <header>
+        <h1> LITERATURA </h1>
+    </header>
+    <main>
+        <section>
+            <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcTc2CFRUqdr0Z3BoHljbhGQ78PqeuzddtBADESnhArSI2ue-dAS" alt="Edgar Allan Poe">
+
+        </section>
+        <section>
+            <h2>¿Que es la literatura?</h2>
+            <p>La literatura es una manifestación artística basada en el uso de la palabra y del lenguaje tanto escrito como oral. Asimismo es el nombre de una materia académica y el nombre de la teoría que estudia las obras literarias. La palabra literatura deriva del latín litteratūra.</p>
+
+            <p>Con este término también se conoce al conjunto de las producciones literarias, por ejemplo, de un país, una lengua o una época. Por extensión, se utiliza además para referirse al conjunto de obras que tratan sobre un tema determinado.</p>
+        </section>
+        <hr>
+    </main>
+    <footer>
+        <p>Derechos reservados</p>
+        <p>Juan Pablo Holguin Cuartas</p>
+        <p>Colegio Parroquial Carmelitano</p>
     
+    </footer>
 </body>
 </html>
