--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <footer>
         <p>Derechos reservados</p>
         <p>Juan Pablo Holguin Cuartas</p>
-        <p>Colegio Parroquial Carmelitano</p>
+        <p>Colegio Parroquial Carmelitano - CESDE</p>
     
     </footer>
 </body>
