--- a/index.html
+++ b/index.html
@@ -3,30 +3,51 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="estilos.css">
+
     <title>Literatura universal</title>
 </head>
 <body>
     <header>
-        <h1> LITERATURA </h1>
+        <h1 id="Titulo">La Literatura y libros más característicos</h1>
+        <nav>
+        <ul>
+            <li><a id="Lista1" href="Relatos.html" target="blank">Relatos</a> </li>
+            <li><a id="Lista2" href="Direccion2.html" target="blank">Enlace 2</a></li>
+            <li><a id="Lista3" href="https://www.youtube.com/channel/UC4uknDH9SFLoxsqiUILpKRQ" target="blank">Ir a LibrosAnimados</a></li>
+        </ul>
+        </nav>
     </header>
+    <br>
     <main>
         <section>
-            <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcTc2CFRUqdr0Z3BoHljbhGQ78PqeuzddtBADESnhArSI2ue-dAS" alt="Edgar Allan Poe">
-
+            <img src="Img/Libreria.jpg" alt="Biblioteca">
         </section>
+        
         <section>
             <h2>¿Que es la literatura?</h2>
             <p>La literatura es una manifestación artística basada en el uso de la palabra y del lenguaje tanto escrito como oral. Asimismo es el nombre de una materia académica y el nombre de la teoría que estudia las obras literarias. La palabra literatura deriva del latín litteratūra.</p>
 
             <p>Con este término también se conoce al conjunto de las producciones literarias, por ejemplo, de un país, una lengua o una época. Por extensión, se utiliza además para referirse al conjunto de obras que tratan sobre un tema determinado.</p>
         </section>
-        <hr>
+        <section>
+            <h1>Poe y la literatura</h1>
+            <video src="Videos/Poe.mp4" controls></video>
+        </section>
+        <section>
+            <h1>La literatura, el cine y la musica</h1>
+            <p> Esta cancion de David Rees representa como la literatura infantil (en este caso de disney) se puede llevar a la gran pantalla, llegando mas al pensamiento de la gente de una forma diferente</p>
+            <audio src="Canciones/Aprendí.mp3" controls></audio>
+        </section>
     </main>
+    <hr>
+
     <footer>
         <p>Derechos reservados</p>
         <p>Juan Pablo Holguin Cuartas</p>
+        <p>Contacto: jpabloholguin06@outlook.com</p>
         <p>Colegio Parroquial Carmelitano - CESDE</p>
-    
+
     </footer>
 </body>
 </html>
